<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/market_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lol"
    tools:context=".MarketRegister">

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="418dp"
        android:layout_height="91dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customerRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginwindow3"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/white"
            android:paddingBottom="20dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#005B9F"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView97"
                android:layout_width="74dp"
                android:layout_height="73dp"
                android:layout_marginTop="60dp"
                android:contentDescription="TODO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/account_icon" />

            <View
                android:id="@+id/view1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="#5EB8FF"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

            <View
                android:id="@+id/view2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="#5EB8FF"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintHorizontal_bias="0.951"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.523" />

            <EditText
                android:id="@+id/marketRegisterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingLeft="8dp"
                android:paddingTop="1dp"
                android:paddingRight="0dp"
                android:paddingBottom="1dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20dp"
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView97" />

            <EditText
                android:id="@+id/marketRegisterEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:paddingTop="1dp"
                android:paddingRight="0dp"
                android:paddingBottom="1dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20dp"
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterName" />

            <EditText
                android:id="@+id/marketRegisterPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="8dp"
                android:paddingTop="1dp"
                android:paddingRight="0dp"
                android:paddingBottom="1dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20dp"
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterEmail" />

            <EditText
                android:id="@+id/marketRegisterPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:paddingTop="1dp"
                android:paddingRight="0dp"
                android:paddingBottom="1dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20dp"
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterPhone" />

            <EditText
                android:id="@+id/marketRegisterIban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/iban_number"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingTop="1dp"
                android:paddingRight="0dp"
                android:paddingBottom="1dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:background="#F3F3F3"
                android:textSize="20dp"
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterPassword" />

            <Button
                android:id="@+id/marketRegisterBackButton"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:background="#005B9F"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterAdress" />

            <Button
                android:id="@+id/marketRegisterSignUpButtom"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="#005B9F"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterAdress" />

            <ProgressBar
                android:id="@+id/marketRegisterProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:indeterminateBehavior="repeat"
                android:indeterminateTint="#005B9F"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterAdress" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="+90"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/marketRegisterPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterEmail"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/marketRegisterAdress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F3F3F3"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:minHeight="80dp"
                android:paddingLeft="8dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marketRegisterIban" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>