...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <Button
            android:id="@+id/marketSignUpButton"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="175dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="36dp"
            android:background="#005B9F"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainChoicewindow"
            android:layout_width="372dp"
            android:layout_height="461dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.581"
...
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar1"
                app:srcCompat="@drawable/logo_main" />

            <Button
                android:id="@+id/mainCustomertButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="44dp"
                android:background="#005B9F"
                android:text="@string/customer_no_points"
                android:textColor="@android:color/white"
                android:textStyle="normal|bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainMarketButton" />

            <Button
                android:id="@+id/mainMarketButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="44dp"
...
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginwindow3" />

        <Button
            android:id="@+id/customerBackButton"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="175dp"
            android:layout_marginRight="175dp"
            android:background="#005B9F"
...
