<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/market_home_constraint_layout"
    android:layout_height="match_parent"
    tools:context=".ui.marketHome.MarketHomeFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNewDebtButton2"
        android:layout_width="62dp"
...
